Les chemins corrects

--- a/code/1_Preprocessing.ipynb
+++ b/code/1_Preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
    ],
    "source": [
     "# Charger le fichier CSV avec le bon séparateur\n",
-    "df = pd.read_csv('csv/jobs.csv', sep=';', encoding='utf-8')\n",
+    "df = pd.read_csv('../data/csv/jobs.csv', sep=';', encoding='utf-8')\n",
     "\n",
     "print(f\"Shape des données: {df.shape}\")\n",
     "print(f\"\\nColonnes: {df.columns.tolist()}\")\n",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -589,10 +589,10 @@
    ],
    "source": [
     "# Sauvegarder le label encoder pour une utilisation ultérieure\n",
-    "with open('pkl/label_encoder.pkl', 'wb') as f:\n",
+    "with open('../data/pkl/label_encoder.pkl', 'wb') as f:\n",
     "    pickle.dump(label_encoder, f)\n",
     "\n",
-    "print(\"Label encoder sauvegardé: label_encoder.pkl\")"
+    "print(\"Label encoder sauvegardé: ../data/pkl/label_encoder.pkl\")"
    ]
   },
   {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,15 +737,15 @@
     "    'df_clean': df_clean\n",
     "}\n",
     "\n",
-    "with open('pkl/preprocessed_data.pkl', 'wb') as f:\n",
+    "with open('../data/pkl/preprocessed_data.pkl', 'wb') as f:\n",
     "    pickle.dump(preprocessed_data, f)\n",
     "\n",
-    "print(\"Données preprocessed sauvegardées: preprocessed_data.pkl\")"
+    "print(\"Données preprocessed sauvegardées: ../data/pkl/preprocessed_data.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -789,8 +789,8 @@
     "print(f\"   - Combined_Text: combinaison de Skills, Job Description, Certifications\")\n",
     "print(f\"   - Job Title Encoded: variable cible encodée\")\n",
     "print(f\"\\n7. Fichiers sauvegardés:\")\n",
-    "print(f\"   - pkl/preprocessed_data.pkl\")\n",
-    "print(f\"   - pkl/label_encoder.pkl\")\n",
+    "print(f\"   - ../data/pkl/preprocessed_data.pkl\")\n",
+    "print(f\"   - ../data/pkl/label_encoder.pkl\")\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"PREPROCESSING TERMINÉ AVEC SUCCÈS\")\n",
     "print(\"=\"*60)"
