--- a/code/2_Feature_Engineering.ipynb
+++ b/code/2_Feature_Engineering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
    ],
    "source": [
     "# Charger les données preprocessed\n",
-    "with open('pkl/preprocessed_data.pkl', 'rb') as f:\n",
+    "with open('../data/pkl/preprocessed_data.pkl', 'rb') as f:\n",
     "    preprocessed_data = pickle.load(f)\n",
     "\n",
     "X_train = preprocessed_data['X_train']\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,10 +419,10 @@
     "    'label_encoder': label_encoder\n",
     "}\n",
     "\n",
-    "with open('pkl/feature_sets.pkl', 'wb') as f:\n",
+    "with open('../data/pkl/feature_sets.pkl', 'wb') as f:\n",
     "    pickle.dump(feature_sets, f)\n",
     "\n",
-    "print(\"Tous les ensembles de features sauvegardés: pkl/feature_sets.pkl\")"
+    "print(\"Tous les ensembles de features sauvegardés: ../data/pkl/feature_sets.pkl\")"
    ]
   },
   {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
     "print(f\"      - Test: {X_test_combined.shape}\")\n",
     "\n",
     "print(\"\\n2. FICHIERS SAUVEGARDÉS:\")\n",
-    "print(\"   - pkl/feature_sets.pkl (tous les ensembles de features)\")\n",
+    "print(\"   - ../data/pkl/feature_sets.pkl (tous les ensembles de features)\")\n",
     "\n",
     "print(\"\\n3. PRÊT POUR LE MODELING:\")\n",
     "print(\"   - 5 représentations différentes de features\")\n",
