--- a/code/4_MLflow.ipynb
+++ b/code/4_MLflow.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,7 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -169,7 +170,7 @@
    ],
    "source": [
     "# Charger les résultats du modeling\n",
-    "with open('pkl/modeling_results_gridsearch.pkl', 'rb') as f:\n",
+    "with open('../data/pkl/modeling_results_gridsearch.pkl', 'rb') as f:\n",
     "    modeling_results = pickle.load(f)\n",
     "\n",
     "all_results = modeling_results['all_results']\n",
@@ -765,8 +766,8 @@
     "# Créer un run pour les métadonnées de l'expérience\n",
     "with mlflow.start_run(run_name=\"Experiment_Metadata\") as run:\n",
     "    # Enregistrer le tableau de comparaison comme artifact\n",
-    "    all_results.to_csv('csv/mlflow_comparison.csv', index=False)\n",
-    "    mlflow.log_artifact('csv/mlflow_comparison.csv', artifact_path=\"comparison\")\n",
+    "    all_results.to_csv('../data/csv/mlflow_comparison.csv', index=False)\n",
+    "    mlflow.log_artifact('../data/csv/mlflow_comparison.csv', artifact_path=\"comparison\")\n",
     "    \n",
     "    # Enregistrer des statistiques globales\n",
     "    mlflow.log_metric(\"total_models_trained\", len(trained_models))\n",
@@ -1030,10 +1031,10 @@
     "    'tracking_uri': mlflow.get_tracking_uri()\n",
     "}\n",
     "\n",
-    "with open('pkl/mlflow_info.pkl', 'wb') as f:\n",
+    "with open('../data/pkl/mlflow_info.pkl', 'wb') as f:\n",
     "    pickle.dump(mlflow_info, f)\n",
     "\n",
-    "print(\"Informations MLflow sauvegardées: pkl/mlflow_info.pkl\")"
+    "print(\"Informations MLflow sauvegardées: ../data/pkl/mlflow_info.pkl\")"
    ]
   },
   {
@@ -1142,8 +1143,8 @@
     "print(f\"   - Meilleur modèle dans le Model Registry\")\n",
     "\n",
     "print(f\"\\n6. FICHIERS SAUVEGARDÉS LOCALEMENT:\")\n",
-    "print(f\"   - pkl/mlflow_info.pkl\")\n",
-    "print(f\"   - csv/mlflow_comparison.csv\")\n",
+    "print(f\"   - ../data/pkl/mlflow_info.pkl\")\n",
+    "print(f\"   - ../data/csv/mlflow_comparison.csv\")\n",
     "\n",
     "print(f\"\\n7. ACCÈS À L'INTERFACE MLFLOW:\")\n",
     "print(f\"   Commande: mlflow ui\")\n",
