Update notebooks after execution

--- a/code/1_Preprocessing.ipynb
+++ b/code/1_Preprocessing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4                         Docker Certified Associate  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,11 +208,11 @@
       "top     Backend Developer  Administrative Support;Document Management;Sch...   \n",
       "freq                   45                                                  9   \n",
       "\n",
-      "                                         Job Description  \\\n",
-      "count                                               2458   \n",
-      "unique                                              2427   \n",
-      "top     Développe des applications web professionnelles.   \n",
-      "freq                                                   2   \n",
+      "                                        Job Description  \\\n",
+      "count                                              2458   \n",
+      "unique                                             2427   \n",
+      "top     Gère les environnements Windows et virtualisés.   \n",
+      "freq                                                  2   \n",
       "\n",
       "                               Certifications  \n",
       "count                                    2458  \n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "4                         docker certified associate  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -576,14 +576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label encoder sauvegardé: label_encoder.pkl\n"
+      "Label encoder sauvegardé: ../data/pkl/label_encoder.pkl\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -715,14 +715,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Données preprocessed sauvegardées: preprocessed_data.pkl\n"
+      "Données preprocessed sauvegardées: ../data/pkl/preprocessed_data.pkl\n"
      ]
     }
    ],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -767,8 +767,8 @@
       "   - Job Title Encoded: variable cible encodée\n",
       "\n",
       "7. Fichiers sauvegardés:\n",
-      "   - pkl/preprocessed_data.pkl\n",
-      "   - pkl/label_encoder.pkl\n",
+      "   - ../data/pkl/preprocessed_data.pkl\n",
+      "   - ../data/pkl/label_encoder.pkl\n",
       "\n",
       "============================================================\n",
       "PREPROCESSING TERMINÉ AVEC SUCCÈS\n",
@@ -799,7 +799,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -813,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
