--- a/code/2_Feature_Engineering.ipynb
+++ b/code/2_Feature_Engineering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,9 +141,9 @@
       "\n",
       "Top 20 features:\n",
       "['27001' '27001 foundation' '3d' '3d contribue' '3d unreal' '9001' 'abr'\n",
-      " 'academic' 'academic coordinator' 'académiques' 'acca' 'access'\n",
-      " 'access control' 'accessibility' 'accessibility git' 'accessibilité'\n",
-      " 'accessibilité des' 'accompagne' 'accompagne la' 'accompagne les']\n"
+      " 'academic' 'academic coordinator' 'académiques' 'académiques et' 'acca'\n",
+      " 'accent' 'accent sur' 'access' 'access control' 'accessibility'\n",
+      " 'accessibility git' 'accessibilité' 'accessibilité des']\n"
      ]
     }
    ],
@@ -381,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tous les ensembles de features sauvegardés: pkl/feature_sets.pkl\n"
+      "Tous les ensembles de features sauvegardés: ../data/pkl/feature_sets.pkl\n"
      ]
     }
    ],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
       "      - Test: (492, 5005)\n",
       "\n",
       "2. FICHIERS SAUVEGARDÉS:\n",
-      "   - pkl/feature_sets.pkl (tous les ensembles de features)\n",
+      "   - ../data/pkl/feature_sets.pkl (tous les ensembles de features)\n",
       "\n",
       "3. PRÊT POUR LE MODELING:\n",
       "   - 5 représentations différentes de features\n",
@@ -524,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
